src/pages/NewCandidateForm/components/BackgroundRecheck/components/PreviousEmployment/index.less
@color-grey: #707177;
@color-blue: #2c6df9;
@orange: orange;

.PreviousEmployment {
  margin-bottom: 1rem;
  :global {
    .ant-col {
      // padding: 0 !important;
    }
    .ant-collapse-arrow {
      padding: 0px !important;
    }
    .ant-collapse-extra {
      display: inline;
      float: none !important;
      color: @color-grey;
      font-size: 12px;
    }
    svg {
      width: 20px;
      height: 20px;
      margin-right: 21px !important;
      color: @color-blue;
      &:last-child {
        margin-right: 0;
      }
    }
    .ant-collapse {
      border: solid 1px #d6dce0;
      border-radius: 5px;
      .ant-collapse-item > .ant-collapse-header {
        padding: 32px;
        background-color: #fff;
        border-radius: 5px;
      }
      .ant-collapse-item {
        border-bottom: none;
      }
      .ant-collapse-content-box {
        padding: 0;
      }
    }
    .ant-checkbox-disabled + span {
      color: #161c29 !important;
    }
    .ant-checkbox-disabled {
      opacity: 0.5;
    }
    span.anticon-calendar {
      svg {
        width: 14px;
        height: 14px;
        margin-right: 0 !important;
        color: #000;
      }
    }
    .ant-space-horizontal {
      padding-left: 16px;
      .ant-space-item {
        margin-right: 0 !important;
      }
    }
    .ant-radio-group {
      display: flex;
    }

    .ant-radio-wrapper {
      margin: 0 !important;
    }
  }
  .checkbox {
    padding-right: 1rem;
    color: #161c29;
    font-size: 14px;
    &:hover {
      border-radius: 5px;
    }
    :global {
      .ant-checkbox-checked {
        &:hover {
          border-radius: 4px;
        }
        .ant-checkbox-inner {
          background: #f6f7f9;
          border-radius: 4px;

          &:hover {
            border-radius: 4px;
          }
          &:after {
            border: 2px solid #2c6df9;
            border-top: 0;
            border-left: 0;
          }
        }
      }
      .ant-checkbox {
        .ant-checkbox-inner {
          background: #f6f7f9;
          border-radius: 4px;
        }
      }
    }
    span {
      &:last-child {
        // padding-top: 1rem;
        padding-left: 1rem;
      }
    }
  }
  .space {
    width: 100%;
    padding: 32px 32px 16px 32px;
    .previousEmployment__row {
      display: flex;
      margin-bottom: 1rem;
      color: #161c29;
      &__name {
        display: flex;
        align-items: center;
      }
      &__file {
        .file__content {
          width: 90%;
          min-height: 27px;
          padding: 4px;
          overflow: hidden;
          white-space: nowrap;
          text-decoration: underline;
          text-overflow: ellipsis;
          border: 1px solid #d9d9d9;
          cursor: pointer;

          &__verified {
            color: #2c6df9;
           
            border: 1px solid #2c6df9;
          }
          &__resubmit {
            color: red;
            
            border: 1px solid red;
          }
          &__ineligible {
            color: @orange;
            
            border: 1px solid @orange;
          }
        }
      }
      &__radio {
        text-align: end;
        display: flex;
        align-items: center;
        .verified {
          color: #2c6df9;
          font-size: 13px;
        }
        .resubmit {
          color: red;
          font-size: 13px;
          :global {
            .ant-radio-checked .ant-radio-inner {
              border-color: red !important ;
            }

            .ant-radio-checked .ant-radio-inner:after {
              background-color: red;
            }

            .ant-radio:hover .ant-radio-inner {
              border-color: red;
            }
          }
        }
        .ineligible {
          font-size: 13px;
          color: @orange;
          :global {
            .ant-radio-checked .ant-radio-inner {
              border-color: @orange !important ;
            }

            .ant-radio-checked .ant-radio-inner:after {
              background-color: @orange;
            }

            .ant-radio:hover .ant-radio-inner {
              border-color: @orange;
            }
          }
        }
      }
      .viewLoading {
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100%;
      }
      .textAlign {
        text-align: right;
        .viewUpLoadDataText {
          color: #47c97f;
          font-weight: 500;
        }
      }
      .textAlignCenter {
        text-align: center;
      }
      :global {
        .ant-upload {
          color: #2c6df9;
          font-weight: 700;
          cursor: pointer;
        }
        .ant-checkbox-checked {
          &:hover {
            border-radius: 4px;
          }
          .ant-checkbox-inner {
            background: #f6f7f9;
            border-radius: 4px;
            &:hover {
              border-radius: 4px;
            }
            &:after {
              border: 2px solid #2c6df9;
              border-top: 0;
              border-left: 0;
            }
          }
        }
        .ant-checkbox {
          .ant-checkbox-inner {
            background: #f6f7f9;
            border-radius: 4px;
          }
        }
        .ant-checkbox-group-item {
          display: block;
          margin-bottom: 1rem;
          &:last-child {
            margin-bottom: 0;
          }
        }
      }
    }
    .checkboxItemError {
      display: flex;
      margin-bottom: 1rem;
      background-color: rgba(255, 108, 108, 0.2);
      .textAlign {
        letter-spacing: 0.13px;
        text-align: right;
        .textLeft {
          text-align: left;
        }
        .boldText {
          font-weight: 500;
        }
      }
      .textAlignCenter {
        text-align: center;
      }
      :global {
        .ant-typography {
          color: #ff6c6c;
          font-size: 14px;
        }
      }
    }
    span {
      &:first {
        input {
          width: 18px;
          height: 18px;
        }
      }
    }
  }
  .plusIcon {
    cursor: pointer;
  }
  .addMore {
    color: @color-blue;
    font-weight: 500;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: 0.12px;
    cursor: pointer;
  }
}

@media screen and (max-width: 768px) {
  .PreviousEmployment {
    :global {
      .ant-collapse-extra {
        display: none;
      }
    }
  }
}

